Addition to notes on object-relational mappings.

--- a/Notes.org
+++ b/Notes.org
@@ -2,31 +2,24 @@
 ** 1:1
 *** Non-containing
 - A references one B
-- Rel: FK in one of the tables which may be null and must be unique.
-
-- Multiplicity: If object ref is mandatory that side should be used for FK.
-  In that case FK must be non-null. If bidi ref is used than side which is
-  mandatory is the side for FK. If both sides are non-mandatory (e.g. lower
-  bound mult is 0) than any side can be used and the FK is null. If both
-  sides are mandatory any side can be used with FK non-null. Other side
-  constraint must be enforced on the app. level.
-
-- Problem: only one null record?
 - Example:
       #+BEGIN_SRC
       entity A {
             ...
-            a: B
+            b: B
       }
       #+END_SRC
 
+- Maps to FK field(s) in A table. If PK of B is composite than FK contains
+  multiple columns. If lower multiplicity is 0 FK is NULL else it is NOT
+  NULL.
+
+- Bidirectional references: FK must be unique.  Problem: only one null record?
+
 *** Containing
 - A contains one B. Deleting A should delete B also, but deleting B is
-  possible without deleting A.
-- Rel: FK in the contained table (B) which is the same as PK.
-- Entity can be contained in only one other entity and only one reference to
-  some entity can be containing reference.
-
+  possible without deleting A if the relationship is non-mandatory (e.g.
+  lower multiplicity bound is 0).
 - Example:
       #+BEGIN_SRC
       entity A {
@@ -34,11 +27,17 @@
             b+: B
       #+END_SRC
 
+- Entity can be contained in only one other entity and only one reference to
+  some entity can be containing reference.
+- Two options:
+      - FK in the contained table (B) which is the same as PK -> PKs of A and
+        B are the same. B can't exists without A.
+      - FK in the container table (A). Must be unique. B can exists without
+        A.
+
 ** 1:n
 *** Non-containing
 - A references possibly many Bs.
-- Rel: FK in B which is not unique and nullable.
-
 - Example:
       #+BEGIN_SRC
       entity A {
@@ -46,13 +45,10 @@
             b: B[*]
       }
       #+END_SRC
+- FK in B which is not unique and nullable.
 
 *** Containing
 - A contains possibly many Bs.
-- Rel: FK in B table which is a part of PK (thus non-null). PK of B contains
-  additional colums which determine the element in the collection (usually an
-  ordinal).
-
 - Example:
       #+BEGIN_SRC
       entity A {
@@ -60,13 +56,13 @@
             b+: B[*]
       }
       #+END_SRC
+- FK in B table which is a part of PK (thus non-null). PK of B contains
+  additional colums which determine the element in the collection (usually an
+  ordinal).
 
 ** n:n
 *** Non-containing
 - A references many Bs and each B references many As.
-- Rel: Additional table with two FKs pointing to each of the entity's tables.
-  Both FKs form additional table PK.
-
 - Example:
       #+BEGIN_SRC
       entity A {
@@ -81,13 +77,11 @@
       }
       #+END_SRC
 
+- Additional table with two FKs pointing to each of the entity's tables.
+  Both FKs form additional table PK.
+
 *** Containing
 - A contains many Bs and each B references many As.
-- Rel: The same as for non-containing but app must take care to delete all
-  containing objects when the container is deleted. When the relationship is
-  deleted, contained object is deleted also, i.e. it can't exists without its
-  container.
-
 - Example:
       #+BEGIN_SRC
       entity A {
@@ -103,4 +97,10 @@
             a<->b: A[*]
       }
       #+END_SRC
+
+- The same as for non-containing but app must take care to delete all
+  containing objects when the container is deleted. When the relationship is
+  deleted, contained object is deleted also, i.e. it can't exists without its
+  container.
+
 
